--- a/src/app/core/shared-components/comment-area/comment-area.component.scss
+++ b/src/app/core/shared-components/comment-area/comment-area.component.scss
@@ -1,7 +1,9 @@
+@use '../../../../styles/mixins.scss' as *;
+@use '../../../../styles/variables.scss' as *;
+
 .comment-textarea{
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    @include column-flex;
     background-color: white;
     border:0.3px solid #ADB5BD;
     border-radius: 5px;
@@ -19,11 +21,10 @@ border: none;
     font-family: 'FiraGO', sans-serif;
    }
    .btn-div{
-    display: flex;
-    justify-content: end;
+    @include flex-end;
     button{
         padding: 5px 8px;
-        background-color: #8338EC;
+        background-color: $primary-color;
         color: white;
         border: none;
         outline: none;
@@ -48,7 +49,7 @@ border: none;
          .btn-div{
 
         button{
-            padding: 5px 10px;
+            @include small-padding;
             font-size: 10px;
         }
        }
