--- a/src/app/core/shared-components/comment-item/comment-item.component.scss
+++ b/src/app/core/shared-components/comment-item/comment-item.component.scss
@@ -1,11 +1,11 @@
+@use '../../../../styles/mixins.scss' as *;
+@use '../../../../styles/variables.scss' as *;
+
 .comment-item{
-    display: flex;
-        flex-direction: column;
-        justify-content: center;
-        // background-color: red;
-        .comment-section{
-            display: flex;
-            flex-direction: row;
+@include column-flex;
+@include flex-center;
+       .comment-section{
+            @include row-flex;
             align-items: start;
             width: 100%;
             gap:10px;
@@ -16,29 +16,27 @@
                 border-radius: 50%;
             }
             .full-comment{
-            display: flex;
-            flex-direction: column;
+                @include column-flex;
             gap:5px;
             width: 100%;
             word-break: break-word;
 
                 .name{
                     font-weight: bold;
-                    color: #212529;
+                    color: $font-dark-color;
                     font-size: 12px;
                 }
                 .description{
                     font-size: 11px;
                 }
                 .reply-btn{
-                    display: flex;
-                    text-align: center;
-                    justify-content: center;
+                    @include column-flex;
+                    @include flex-center;
                     width:fit-content;
                     align-items: center;
                     gap:2px;
                     font-size: 8px;
-                    color: #8338EC;
+                    color: $primary-color;
                     background-color: #DDD2FF;
                     outline: none;
                     border: none;
@@ -58,8 +56,7 @@
         }
         .sub-comment-section{
             margin-left: 25px;
-        display: flex;
-        flex-direction: column;
+        @include column-flex;
         gap:10px;
         margin-top: 10px;
         }
