--- a/src/app/core/shared-components/dropdown/dropdown.component.scss
+++ b/src/app/core/shared-components/dropdown/dropdown.component.scss
@@ -1,4 +1,7 @@
 
+@use '../../../../styles/mixins.scss' as *;
+@use '../../../../styles/variables.scss' as *;
+
 :host{
     position: relative;
     width: 100%;
@@ -11,11 +14,9 @@
     .selected-option{
         padding-top: 0px;
         margin-top: 5px;
-        display: flex;
-        flex-direction: row;
+       @include row-flex-space;
         padding: 4px;
-        align-items: center;
-        justify-content: space-between;
+        @include flex-align-items;
         border: 1px solid #DEE2E6;
         background-color: white;
         border-radius: 4px;
@@ -23,10 +24,9 @@
         width:100%;
         overflow-wrap: break-word;
         .img-container{
-            display: flex;
-        flex-direction: row;
+            @include row-flex;
         gap:4px;
-        align-items: center;
+        @include flex-align-items;
         padding: 5px;
         img{
             width:14px;
@@ -51,22 +51,19 @@ white-space: normal;  }
         background-color: white;
         list-style: none;
         border-radius: 4px;
-        display: flex;
-        flex-direction: column;
+        @include column-flex;
        padding-left: 4px;
        .add-empl{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+        @include row-flex;
+        @include flex-align-items;
     font-size: 12px;
-    color: #8338EC;
+    color: $primary-color;
     img{
         height: 16px;
     }
        }
         li{
-            display: flex;
-            flex-direction: row;
+            @include row-flex;
             padding: 4px;
             gap:4px;
             margin-top: 5px;
@@ -74,8 +71,7 @@ white-space: normal;  }
                 width:14px;
                 height: 14px;
                 border-radius: 50%;
-                object-fit: cover;
-                object-position: top center
+                @include img-fit
             }
             p{font-size: 12px;}
         }
@@ -103,8 +99,7 @@ white-space: normal;  }
     ul{
        
        .add-empl{
-        align-items: center;
-        display: flex;
+        @include flex-align-items;
        }
         li{
             img{
