--- a/src/app/core/shared-components/filtering-criterias/filtering-criterias.component.scss
+++ b/src/app/core/shared-components/filtering-criterias/filtering-criterias.component.scss
@@ -1,10 +1,12 @@
+@use '../../../../styles/mixins.scss' as *;
+@use '../../../../styles/variables.scss' as *;
+
 .main-container{
     position: absolute;
     width:100%;
-    border: 0.5px solid #8338EC;
+    border: 0.5px solid $primary-color;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
+    @include column-flex;
     gap:10px;
     padding: 20px 10px 10px;
     margin-top: 5px;
@@ -16,20 +18,18 @@
   padding: 0;
   margin: 0;
   li {
-    display: flex;
-    align-items: center;
+    @include flex-align-items;
     margin-bottom: 10px; 
     position: relative;
     break-inside: avoid;
     margin-bottom: 10px;
        section{
-        display: flex;
-    align-items: center;
+        @include flex-align-items;
     gap:5px;
            label, input{
         cursor: pointer;
         display: flex;
-        color:#212529
+        color: $font-dark-color
     };
     label{
         font-size:10px;
@@ -50,13 +50,13 @@
         content:'';
         width:0.3rem;
         height: 0.3rem;
-        border:1.5px solid #212529;
+        border:1.5px solid $font-dark-color;
         border-radius: 3px;
         padding: 3px;
         margin-right: 3px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @include flex-center;
+        @include flex-align-items;
+
     }
 
     }
@@ -64,14 +64,12 @@
 
     }
     .btn-sect{
-        display: flex;
-        justify-content: end;
+        @include flex-end;
         button{
-            display: flex;
-            align-items: center;
+            @include flex-align-items;
 font-size: 13px;
 color: white;
-background-color:#8338EC;
+background-color:$primary-color;
 border-radius: 10px;
 border: none;
 padding:0px 15px 2px;
@@ -114,8 +112,7 @@ padding:0px 15px 2px;
         .btn-sect{
             button{
                 width:135px;
-                display: flex;
-                justify-content: center;
+                @include flex-center;
     font-size: 15px;
     padding:5px 15px;
     border-radius: 20px;
@@ -131,8 +128,7 @@ padding:0px 15px 2px;
         .btn-sect{
             button{
                 width:135px;
-                display: flex;
-                justify-content: center;
+                @include flex-center;
     font-size: 15px;
     padding:5px 15px;
     border-radius: 20px;
