--- a/src/app/core/shared-components/li/li.component.scss
+++ b/src/app/core/shared-components/li/li.component.scss
@@ -1,10 +1,12 @@
+@use '../../../../styles/variables.scss' as *;
+@use '../../../../styles/mixins.scss' as *;
+
 :host{
     font-size: 10px;
-    display: flex;
-    align-items: center;
+    @include flex-align-items;
     gap:4px;
     font-weight: bold;
 }
 :host:hover{
-    color: #8338EC
+    color: $primary-color
 }
