--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-
+@use './styles/variables.scss' as *;
   
   body {
     font-family: 'FiraGO', sans-serif !important;
@@ -14,14 +14,14 @@
 }
 
 .valid{
-    color: #08A508 !important
+    color: $green-color !important
 }
 
 .invalid{
-    color: #FA4D4D !important}
+    color: $invalid-color !important}
 
 .invalid-border{
-    border: 1px solid #FA4D4D !important ;
+    border: 1px solid $invalid-color !important ;
 }    
 
 .loader-div{
@@ -34,7 +34,7 @@
  flex-direction: column;
  gap:20px;
  p{
-  color: #8338EC;
+  color: $primary-color;
   font-size: 16px;
  }
 }
@@ -49,7 +49,7 @@
  
  gap:20px;
  p{
-  color: #FB5607;
+  color: $primary-orange;
   font-size: 16px;
  }
 }
