added error message to Comments section and slightly modified task styling

--- a/src/app/core/shared-components/comment-area/comment-area.component.scss
+++ b/src/app/core/shared-components/comment-area/comment-area.component.scss
@@ -11,6 +11,7 @@
     margin-top: 8px;
     gap:5px;
    textarea{
+    font-family: 'FiraGO', sans-serif !important;
     height: 50px;
 border: none; 
     border-radius: 5px;
